tests/evaluator/should_fail/channel_alphabets.csp
channel c : {0..1}

test1 = {|c.2|} == {|c.2|}
